--- a/simple-calculator.html
+++ b/simple-calculator.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h2>Simple Calculator</h2>
+    <div>
+        <input type="text" id="inputValue" />
+    </div>
+    <div><span>Result: </span> <span id="result"></span></div>
     <script type= "text/javaScript" src="./calculator.js"></script>
+    <script type= "text/javaScript" src="./main.js"></script>
 </body>
 </html>
