fixed code, updated test specs.

--- a/simple-calculator.html
+++ b/simple-calculator.html
@@ -14,6 +14,6 @@
   <!-- Include helper -->
   <script src="./spec/helpers/calculatorHelper.js"></script>
   <!-- Include main GUI code -->
-  <script src="./main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
